jswt-semantics/src/globals/snapshots/jswt_semantics__globals__variables__test__context_resolves_duplicate_variable_error.snap
---
source: jswt-semantics/src/globals/variables.rs
expression: resolver

---
GlobalSemanticResolver {
    bindings: BindingsTable {
        bindings: {},
    },
    symbols: SymbolTable {
        table: [
            {
                "PI": Type(
                    TypeSignature {
                        ty: Unknown,
                    },
                ),
                "test": Function(
                    FunctionSignature {
                        params: [
                            Binding(
                                "i32",
                            ),
                            Binding(
                                "i32",
                            ),
                        ],
                        returns: Binding(
                            "void",
                        ),
                    },
                ),
            },
        ],
    },
    errors: [
        VariableAlreadyDefined {
            name: "PI",
            span: Span {
                file: "test_context_resolves_duplicate_variable_error",
                module: "module/test_context_resolves_duplicate_variable_error",
                start: 40,
                end: 42,
            },
        },
    ],
}
