jswt-semantics/src/globals/snapshots/jswt_semantics__globals__variables__test__context_resolves_global_variables.snap
---
source: jswt-semantics/src/globals/variables.rs
expression: resolver
---
GlobalSemanticResolver {
    bindings: BindingsTable {
        bindings: {},
    },
    symbols: SimpleSymbolTable {
        table: [
            {
                "PI": Type(
                    TypeSignature {
                        ty: Unknown,
                    },
                ),
                "test": Function(
                    FunctionSignature {
                        params: [
                            Binding(
                                "i32",
                            ),
                            Binding(
                                "i32",
                            ),
                        ],
                        returns: Binding(
                            "void",
                        ),
                    },
                ),
            },
        ],
    },
    errors: [],
}
